--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/view/HomePage.ui.xml
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/view/HomePage.ui.xml
@@ -1,6 +1,6 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui">
+	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:menuButtons="urn:import:org.com.perso.footcelad.hmi.client.widgets">
 
 	<ui:with type="org.com.perso.footcelad.hmi.client.view.HomePageResources"
 		field="resources"></ui:with>
@@ -31,15 +31,14 @@
 		padding: 10px 100px 10px 50px;
 	}
 	
-	.panel-table{
+	.panel-table {
 		padding: 45px 0px 0px 0px;
 	}
 	</ui:style>
 
 	<g:DockLayoutPanel unit='PX'>
 		<g:north size="150">
-			<g:VerticalPanel width="100%" height="100%"
-				>
+			<g:VerticalPanel width="100%" height="100%">
 				<g:cell height="85%" horizontalAlignment="ALIGN_CENTER"
 					verticalAlignment="ALIGN_BOTTOM">
 					<g:Label ui:field="banner" styleName="{resources.css.banner}">
@@ -57,7 +56,7 @@
 
 		<g:center>
 			<g:VerticalPanel width="100%" height="100%"
-				 styleName="{style.panel}">
+				styleName="{style.panel}">
 				<g:cell>
 					<g:DockLayoutPanel styleName="style.panel-style"
 						width="100%" height="50px">
@@ -90,37 +89,49 @@
 					</g:HorizontalPanel>
 				</g:cell>
 				<g:cell height="100%">
-					<g:ScrollPanel width="100%" height="100%" styleName="{style.panel-table}">
+					<g:ScrollPanel width="100%" height="100%"
+						styleName="{style.panel-table}">
 						<g:FlexTable ui:field="table" styleName="{style.table-style}"
-							 width="100%" height="100%" />
+							width="100%" height="100%" />
 					</g:ScrollPanel>
 				</g:cell>
 			</g:VerticalPanel>
 		</g:center>
 
 		<g:west size="200">
-			<g:VerticalPanel width="100%" height="100%"
-				>
-				<g:cell height="60px" horizontalAlignment="ALIGN_LEFT"
+			<g:VerticalPanel width="100%" height="100%">
+
+				<!-- STUBB -->
+				<g:cell height="26px" horizontalAlignment="ALIGN_LEFT"
 					verticalAlignment="ALIGN_BOTTOM">
-					<g:Button ui:field="championshipBtn" styleName="{resources.css.menuBtns}"
-						text="{messages.championshipBtn}"></g:Button>
+					<g:Label></g:Label>
+				</g:cell>
+
+				<g:cell height="25px" horizontalAlignment="ALIGN_LEFT"
+					verticalAlignment="ALIGN_BOTTOM">
+					<menuButtons:CustomToggleMenuButton
+						ui:field="championshipBtn" isDown="false" upText="{messages.championshipBtn}"
+						downText="{messages.championshipBtn}"></menuButtons:CustomToggleMenuButton>
 				</g:cell>
 				<g:cell horizontalAlignment="ALIGN_LEFT">
-					<g:Button ui:field="matchsBtn" styleName="{resources.css.menuBtns}"
-						text="{messages.matchsBtn}"></g:Button>
+					<menuButtons:CustomToggleMenuButton
+						ui:field="matchsBtn" isDown="true" upText="{messages.matchsBtn}"
+						downText="{messages.matchsBtn}"></menuButtons:CustomToggleMenuButton>
 				</g:cell>
 				<g:cell horizontalAlignment="ALIGN_LEFT">
-					<g:Button ui:field="teamsBtn" styleName="{resources.css.menuBtns}"
-						text="{messages.teamsBtn}"></g:Button>
+					<menuButtons:CustomToggleMenuButton
+						ui:field="teamsBtn" isDown="false" upText="{messages.teamsBtn}"
+						downText="{messages.teamsBtn}"></menuButtons:CustomToggleMenuButton>
 				</g:cell>
 				<g:cell horizontalAlignment="ALIGN_LEFT">
-					<g:Button ui:field="playersBtn" styleName="{resources.css.menuBtns}"
-						text="{messages.playersBtn}"></g:Button>
+					<menuButtons:CustomToggleMenuButton
+						ui:field="playersBtn" isDown="false" upText="{messages.playersBtn}"
+						downText="{messages.playersBtn}"></menuButtons:CustomToggleMenuButton>
 				</g:cell>
 				<g:cell height="100%" horizontalAlignment="ALIGN_LEFT">
-					<g:Button ui:field="stadiumsBtn" styleName="{resources.css.menuBtns}"
-						text="{messages.stadiumsBtn}"></g:Button>
+					<menuButtons:CustomToggleMenuButton
+						ui:field="stadiumsBtn" isDown="false" upText="{messages.stadiumsBtn}"
+						downText="{messages.stadiumsBtn}"></menuButtons:CustomToggleMenuButton>
 				</g:cell>
 			</g:VerticalPanel>
 		</g:west>
@@ -129,7 +140,7 @@
 
 			<g:DockLayoutPanel>
 				<g:east size="40">
-					<g:VerticalPanel width="100%" >
+					<g:VerticalPanel width="100%">
 						<g:cell height="102px" horizontalAlignment="ALIGN_RIGHT"
 							verticalAlignment="ALIGN_BOTTOM">
 							<g:PushButton ui:field="profileBtn" styleName="{resources.css.home}">
@@ -140,8 +151,7 @@
 					</g:VerticalPanel>
 				</g:east>
 				<g:west size="180">
-					<g:VerticalPanel width="100%" height="100%"
-						>
+					<g:VerticalPanel width="100%" height="100%">
 						<g:cell height="97px" horizontalAlignment="ALIGN_LEFT"
 							verticalAlignment="ALIGN_BOTTOM">
 							<g:Button ui:field="injuredBtn" styleName="{resources.css.otherBtns}"
