--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/widgets/ctgbmenu/CustomToggleMenuButton.css
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/widgets/ctgbmenu/CustomToggleMenuButton.css
@@ -5,7 +5,7 @@
 @url menuUp menuUp;
 @url menuOver menuOver;
 .menuBtns-up {
-	font-size: 14pt;
+	font-size: 12pt;
 	width: 150px;
 	height: 25px;
 	text-align: center;
@@ -16,7 +16,7 @@
 }
 
 .menuBtns {
-	font-size: 14pt;
+	font-size: 12pt;
 	width: 150px;
 	height: 25px;
 	text-align: center;
@@ -26,7 +26,8 @@
 }
 
 .menuBtns-down {
-	font-size: 14pt;
+	font-size: 13pt;
+	font-weight: bold;
 	width: 150px;
 	height: 25px;
 	text-align: center;
@@ -38,7 +39,8 @@
 }
 
 .menuBtns-down-hovering {
-	font-size: 14pt;
+	font-size: 13pt;
+	font-weight: bold;
 	width: 150px;
 	height: 25px;
 	text-align: center;
@@ -50,7 +52,7 @@
 }
 
 .menuBtns-up-hovering {
-	font-size: 14pt;
+	font-size: 12pt;
 	width: 150px;
 	height: 25px;
 	text-align: center;
