--- a/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/view/HomePage.ui.xml
+++ b/com.perso.footcelad.parent/com.perso.footcelad.hmi/src/main/java/org/com/perso/footcelad/hmi/client/view/HomePage.ui.xml
@@ -1,6 +1,9 @@
 <!DOCTYPE ui:UiBinder SYSTEM "http://dl.google.com/gwt/DTD/xhtml.ent">
 <ui:UiBinder xmlns:ui="urn:ui:com.google.gwt.uibinder"
-	xmlns:g="urn:import:com.google.gwt.user.client.ui" xmlns:menuButtons="urn:import:org.com.perso.footcelad.hmi.client.widgets.ctgbmenu">
+	xmlns:g="urn:import:com.google.gwt.user.client.ui"
+	xmlns:menuButtons="urn:import:org.com.perso.footcelad.hmi.client.widgets.ctgbmenu"
+	xmlns:tgdButtons="urn:import:org.com.perso.footcelad.hmi.client.widgets.ctgb"
+	xmlns:btnGroup="com.git">
 
 	<ui:with type="org.com.perso.footcelad.hmi.client.view.HomePageResources"
 		field="resources"></ui:with>
@@ -23,9 +26,9 @@
 	}
 	
 	.dispoBtn-style {
-		font-size: 14pt;
+		font-size: 13pt;
 		text-align: center;
-		width: 95%;
+		width: 150px;
 		margin: 25px 5px 5px 5px;
 	}
 	
@@ -138,7 +141,7 @@
 			</g:VerticalPanel>
 		</g:west>
 
-		<g:east size="220">
+		<g:east size="200">
 
 			<g:DockLayoutPanel>
 				<g:east size="40">
@@ -152,15 +155,21 @@
 						</g:cell>
 					</g:VerticalPanel>
 				</g:east>
-				<g:west size="180">
+				<g:west size="160">
 					<g:VerticalPanel width="100%" height="100%">
-						<g:cell height="97px" horizontalAlignment="ALIGN_LEFT"
+						<!-- STUBB -->
+						<g:cell height="59px" horizontalAlignment="ALIGN_LEFT"
 							verticalAlignment="ALIGN_BOTTOM">
-							<g:Button ui:field="injuredBtn" styleName="{resources.css.otherBtns}"
-								text="{messages.injuredBtn}"></g:Button>
+							<g:Label></g:Label>
+						</g:cell>
+						<g:cell height="25px" horizontalAlignment="ALIGN_CENTER"
+							verticalAlignment="ALIGN_BOTTOM">
+							<tgdButtons:CustomToggleButton
+								ui:field="injuredBtn" isDown="false" downText="{messages.injuredBtn}"
+								upText="{messages.healthy}"></tgdButtons:CustomToggleButton>
 						</g:cell>
 						<g:cell horizontalAlignment="ALIGN_CENTER"
-							verticalAlignment="ALIGN_MIDDLE" width="100%" height="160px">
+							verticalAlignment="ALIGN_MIDDLE" width="150px" height="160px">
 							<g:Image resource="{resources.map}" styleName="{resources.css.map}"></g:Image>
 						</g:cell>
 						<g:cell horizontalAlignment="ALIGN_LEFT">
